EPMRPP-118946 || Fix test and clean up