@@ -56,8 +56,8 @@ import static com.epam.reportportal.base.infrastructure.persistence.dao.constant
 import static com.epam.reportportal.base.infrastructure.persistence.dao.constant.WidgetContentRepositoryConstants.USER_ID;
 import static com.epam.reportportal.base.infrastructure.persistence.dao.constant.WidgetContentRepositoryConstants.VALUE;
 import static com.epam.reportportal.base.infrastructure.persistence.dao.util.JooqFieldNameTransformer.fieldName;
+import static com.epam.reportportal.base.infrastructure.persistence.jooq.Tables.LAUNCH_ATTRIBUTE;
 import static com.epam.reportportal.base.infrastructure.persistence.jooq.tables.JActivity.ACTIVITY;
-import static com.epam.reportportal.base.infrastructure.persistence.jooq.tables.JItemAttribute.ITEM_ATTRIBUTE;
 import static com.epam.reportportal.base.infrastructure.persistence.jooq.tables.JLaunch.LAUNCH;
 import static com.epam.reportportal.base.infrastructure.persistence.jooq.tables.JPatternTemplate.PATTERN_TEMPLATE;
 import static com.epam.reportportal.base.infrastructure.persistence.jooq.tables.JProject.PROJECT;
@@ -181,12 +181,14 @@ public class WidgetContentUtil {
 
   public static final BiFunction<Result<? extends Record>, List<String>, List<LaunchesTableContent>> LAUNCHES_TABLE_FETCHER = (result, contentFields) -> {
 
-    List<String> nonStatisticsFields = contentFields.stream().filter(cf -> !cf.startsWith(STATISTICS_KEY))
-        .collect(Collectors.toList());
+    List<String> nonStatisticsFields = contentFields.stream()
+        .filter(cf -> !cf.startsWith(STATISTICS_KEY)).collect(Collectors.toList());
 
-    nonStatisticsFields.removeAll(Stream.of(LAUNCH.ID, LAUNCH.NAME, LAUNCH.NUMBER, LAUNCH.START_TIME)
-        .map(cf -> CaseFormat.LOWER_UNDERSCORE.to(CaseFormat.LOWER_CAMEL, cf.getQualifiedName().last()))
-        .collect(Collectors.toList()));
+    nonStatisticsFields.removeAll(
+        Stream.of(LAUNCH.ID, LAUNCH.NAME, LAUNCH.NUMBER, LAUNCH.START_TIME)
+            .map(cf -> CaseFormat.LOWER_UNDERSCORE.to(CaseFormat.LOWER_CAMEL,
+                cf.getQualifiedName().last()))
+            .toList());
 
     Map<Long, LaunchesTableContent> resultMap = new LinkedHashMap<>();
 
@@ -196,7 +198,7 @@ public class WidgetContentUtil {
 
     Optional<Field<?>> statisticsField = ofNullable(result.field(fieldName(STATISTICS_TABLE, SF_NAME)));
     Optional<Field<?>> startTimeField = ofNullable(result.field(LAUNCH.START_TIME.getQualifiedName().toString()));
-    Optional<Field<?>> itemAttributeIdField = ofNullable(result.field(ATTR_ID));
+    Optional<Field<?>> attributeIdField = ofNullable(result.field(ATTR_ID));
 
     result.forEach(record -> {
       LaunchesTableContent content;
@@ -205,33 +207,40 @@ public class WidgetContentUtil {
       } else {
         content = new LaunchesTableContent();
         content.setId(record.get(LAUNCH.ID));
-        content.setName(record.get(DSL.field(LAUNCH.NAME.getQualifiedName().toString()), String.class));
-        content.setNumber(record.get(DSL.field(LAUNCH.NUMBER.getQualifiedName().toString()), Integer.class));
+        content.setName(
+            record.get(DSL.field(LAUNCH.NAME.getQualifiedName().toString()), String.class));
+        content.setNumber(
+            record.get(DSL.field(LAUNCH.NUMBER.getQualifiedName().toString()), Integer.class));
 
-        startTimeField.ifPresent(f -> content.setStartTime(record.get(f, Timestamp.class).toInstant()));
+        startTimeField.ifPresent(
+            f -> content.setStartTime(record.get(f, Timestamp.class).toInstant()));
       }
 
       statisticsField.flatMap(sf -> ofNullable(record.get(sf, String.class)))
           .ifPresent(v -> content.getValues()
               .put(v,
-                  ofNullable(record.get(fieldName(STATISTICS_TABLE, STATISTICS_COUNTER), String.class)).orElse("0")));
+                  ofNullable(record.get(fieldName(STATISTICS_TABLE, STATISTICS_COUNTER),
+                      String.class)).orElse("0")));
 
       resultMap.put(record.get(LAUNCH.ID), content);
 
       nonStatisticsFields.forEach(cf -> {
         if (CRITERIA_END_TIME.equalsIgnoreCase(cf) || CRITERIA_LAST_MODIFIED.equalsIgnoreCase(cf)) {
-          consumeIfNotNull(cf, record.get(criteria.get(cf), Timestamp.class), (k, v) -> content.getValues().put(k, v));
+          consumeIfNotNull(cf, record.get(criteria.get(cf), Timestamp.class),
+              (k, v) -> content.getValues().put(k, v));
         } else {
-          consumeIfNotNull(cf, record.get(criteria.get(cf)), (k, v) -> content.getValues().put(k, String.valueOf(v)));
+          consumeIfNotNull(cf, record.get(criteria.get(cf)),
+              (k, v) -> content.getValues().put(k, String.valueOf(v)));
         }
       });
 
-      itemAttributeIdField.flatMap(f -> ofNullable(record.get(f))).ifPresent(id -> {
-        Set<ItemAttributePojo> attributes = ofNullable(content.getAttributes()).orElseGet(Sets::newLinkedHashSet);
+      attributeIdField.flatMap(f -> ofNullable(record.get(f))).ifPresent(id -> {
+        Set<ItemAttributePojo> attributes = ofNullable(content.getAttributes()).orElseGet(
+            Sets::newLinkedHashSet);
 
         ItemAttributePojo itemAttribute = new ItemAttributePojo();
-        itemAttribute.setKey(record.get(ITEM_ATTRIBUTE.KEY));
-        itemAttribute.setValue(record.get(ITEM_ATTRIBUTE.VALUE));
+        itemAttribute.setKey(record.get(LAUNCH_ATTRIBUTE.KEY));
+        itemAttribute.setValue(record.get(LAUNCH_ATTRIBUTE.VALUE));
 
         attributes.add(itemAttribute);
 
@@ -561,14 +570,14 @@ public class WidgetContentUtil {
     if (isLatest) {
       content = Maps.newLinkedHashMap();
       result.forEach(record -> {
-        String attribute = record.get(ITEM_ATTRIBUTE.VALUE, String.class);
-        List<Long> launchIds = content.computeIfAbsent(attribute, k -> Lists.newArrayList());
+        String attribute = record.get(LAUNCH_ATTRIBUTE.VALUE, String.class);
+        List<Long> launchIds = content.computeIfAbsent(attribute, _ -> Lists.newArrayList());
         launchIds.add(record.get(fieldName(ID), Long.class));
       });
     } else {
       content = Maps.newLinkedHashMapWithExpectedSize(result.size());
       result.forEach(record -> {
-        String attribute = record.get(ITEM_ATTRIBUTE.VALUE, String.class);
+        String attribute = record.get(LAUNCH_ATTRIBUTE.VALUE, String.class);
         content.put(attribute, Lists.newArrayList(record.get(fieldName(ID), Long[].class)));
       });
     }
